refactor msbuild properties

--- a/src/NLog.Extensions.ThisClass/NLog.Extensions.ThisClass.csproj
+++ b/src/NLog.Extensions.ThisClass/NLog.Extensions.ThisClass.csproj
@@ -2,19 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageScribanIncludeSource>true</PackageScribanIncludeSource>
-    <AnalysisLevel>latest</AnalysisLevel>
-    <LangVersion>latest</LangVersion>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="ClassLogger.sbntxt" />
-    <None Remove="ClassLoggerAttribute.txt" />
-    <None Remove="IThisClassImpl.sbntxt" />
-    <None Remove="ThisClassAttribute.IThisClass.txt" />
-    <None Remove="ThisClassExtensions.txt" />
-  </ItemGroup>
+  <PropertyGroup>
+    <Description>Create class loggers using source generators powered by Roslyn.</Description>
+  </PropertyGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="ClassLogger.sbntxt" />
@@ -29,13 +21,6 @@
 
   <ItemGroup>
     <PackageReference Include="Scriban" Version="4.0.1" Pack="false" IncludeAssets="build" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
-
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.10.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2" PrivateAssets="all" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="NLog" Version="4.7.10" />
   </ItemGroup>
 
