--- a/src/NLog.Extensions.ThisClass/NLog.Extensions.ThisClass.csproj
+++ b/src/NLog.Extensions.ThisClass/NLog.Extensions.ThisClass.csproj
@@ -28,4 +28,9 @@
     <ProjectReference Include="..\ThisClass\ThisClass.csproj" PrivateAssets="all" Pack="false" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="3.11.0" />
+    <PackageReference Update="Microsoft.CSharp" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
