--- a/src/ThisClass/ThisClass.csproj
+++ b/src/ThisClass/ThisClass.csproj
@@ -19,4 +19,9 @@
     <PackageReference Include="Scriban" Version="4.0.1" Pack="false" IncludeAssets="build" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="3.11.0" />
+    <PackageReference Update="Microsoft.CSharp" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
