--- a/src/NLog.Extensions.ThisClass/NLog.Extensions.ThisClass.csproj
+++ b/src/NLog.Extensions.ThisClass/NLog.Extensions.ThisClass.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -11,7 +12,7 @@
     <ItemGroup>
     <Compile Include="../ThisClass/EmbeddedResource.cs" />
     <Compile Include="../ThisClass/INamedTypeSymbolExtensions.cs" />
-    <Compile Include="../ThisClass/ThisClassGenerator.cs" />
+    <Compile Include="../ThisClass/ThisClassGenerator.Statics.cs" />
     <EmbeddedResource Include="../ThisClass/ThisClass.sbntxt" />
     <EmbeddedResource Include="../ThisClass/ThisClassAttribute.txt" />
   </ItemGroup>
@@ -28,13 +29,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Scriban" Version="4.0.1" Pack="false" IncludeAssets="build" />
-    <PackageReference Include="NLog" Version="4.7.12" />
+    <PackageReference Include="NLog" Version="4.7.13" Pack="false" IncludeAssets="build" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="3.11.0" />
-    <PackageReference Update="Microsoft.CSharp" Version="4.7.0" />
+    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
 
 </Project>
