--- a/src/ThisClass/ThisClass.csproj
+++ b/src/ThisClass/ThisClass.csproj
@@ -16,13 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Scriban" Version="4.0.1" Pack="false" IncludeAssets="build" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" />
-    <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="3.11.0" />
-    <PackageReference Update="Microsoft.CSharp" Version="4.7.0" />
+    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
 
 </Project>
