Add ClassLoggerLazy attribute

--- a/src/NLog.Extensions.ThisClass/NLog.Extensions.ThisClass.csproj
+++ b/src/NLog.Extensions.ThisClass/NLog.Extensions.ThisClass.csproj
@@ -18,7 +18,9 @@
 
   <ItemGroup>
     <EmbeddedResource Include="ClassLogger.sbntxt" />
+    <EmbeddedResource Include="ClassLoggerLazy.sbntxt" />
     <EmbeddedResource Include="ClassLoggerAttribute.txt" />
+    <EmbeddedResource Include="ClassLoggerLazyAttribute.txt" />
   </ItemGroup>
 
   <ItemGroup>
