fix build versioning

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -20,4 +20,10 @@
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all" />
     <PackageReference Include="Scriban" Version="5.0.0" Pack="false" IncludeAssets="build" PrivateAssets="all" />
   </ItemGroup>
+    <ItemGroup>
+    <PackageReference Include="Nerdbank.GitVersioning" Condition="!Exists('packages.config')">
+      <Version>3.4.220</Version>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
