--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,24 +5,25 @@
     <AnalysisLevel>latest</AnalysisLevel>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
   <PropertyGroup>
     <Authors>Trym Lund Flogard</Authors>
     <Company>Konfluent AS</Company>
-    <Copyright>Copyright © 2021 Trym Lund Flogard</Copyright>
+    <Copyright>Copyright © 2023 Trym Lund Flogard</Copyright>
   </PropertyGroup>
   <PropertyGroup>
     <PackageScribanIncludeSource>true</PackageScribanIncludeSource>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all" />
-    <PackageReference Include="Scriban" Version="5.5.2" Pack="false" IncludeAssets="build" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
+    <PackageReference Include="Scriban" Version="5.9.0" Pack="false" IncludeAssets="build" PrivateAssets="all" />
   </ItemGroup>
     <ItemGroup>
     <PackageReference Include="Nerdbank.GitVersioning" Condition="!Exists('packages.config')">
-      <Version>3.5.119</Version>
+      <Version>3.6.133</Version>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
