--- a/src/NLog.Extensions.ThisClass/NLog.Extensions.ThisClass.csproj
+++ b/src/NLog.Extensions.ThisClass/NLog.Extensions.ThisClass.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NLog" Version="5.*" Pack="false" IncludeAssets="build" PrivateAssets="All" />
+    <PackageReference Include="NLog" Pack="false" IncludeAssets="build" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
