--- a/samples/SampleApp.NLog/SampleApp.NLog.csproj
+++ b/samples/SampleApp.NLog/SampleApp.NLog.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NLog" Version="5.*" />
+    <PackageReference Include="NLog" />
   </ItemGroup>
 
   <ItemGroup>
